src/objects/Participant__c.object
<CustomObject>
    <description>patrticipants like:track speakersPanelistsAnnouncersmoderatorsetc.</description>
    <fields>
        <fullName>GN_User__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>GN User</label>
        <referenceTo>GN_User__c</referenceTo>
        <relationshipName>Participants</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant_Role__c</fullName>
        <label>Participant Role</label>
        <picklist>
            <picklistValues>
                <fullName>Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panelist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Slot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Slot</label>
        <referenceTo>Time_Slots__c</referenceTo>
        <relationshipName>Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BLN Participant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Patrticipant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>